--- a/shrinkwrap.yaml
+++ b/shrinkwrap.yaml
@@ -1,4 +1,5 @@
 dependencies:
+  basic-auth: 2.0.0
   express: 4.16.3
 packages:
   /accepts/1.3.5:
@@ -14,6 +15,14 @@ packages:
     dev: false
     resolution:
       integrity: sha1-ml9pkFGx5wczKPKgCJaLZOopVdI=
+  /basic-auth/2.0.0:
+    dependencies:
+      safe-buffer: 5.1.1
+    dev: false
+    engines:
+      node: '>= 0.8'
+    resolution:
+      integrity: sha1-AV2z81PgLlY3d1X5YnQuiYHnu7o=
   /body-parser/1.18.2:
     dependencies:
       bytes: 3.0.0
@@ -365,4 +374,5 @@ registry: 'https://registry.npmjs.org/'
 shrinkwrapMinorVersion: 4
 shrinkwrapVersion: 3
 specifiers:
+  basic-auth: ^2.0.0
   express: ^4.16.3
